classmarker.com (archived on 2013-12-26)
{
  "alexa_rank": 106348,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 4183,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 10.89,
  "homepage_snapshot_redirected_domain": "classmarker.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131004035445id_/http://www.classmarker.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131004035445id_/http%3A//classmarker.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "classmarker.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226125859id_/http%3A//www.classmarker.com/online-testing/privacy",
  "policy_title": "Privacy ClassMarker",
  "policy_url": "classmarker.com/online-testing/privacy",
  "sha1": "26467f00e9aaa45e2a0799fe4564630278712a66",
  "simhash": 12384218283401664990,
  "simhash_updated": true,
  "site_hostname": "classmarker.com",
  "site_url": "http://classmarker.com",
  "smog": 13.02,
  "strict_updated": true,
  "timestamp": "20131226125859",
  "word_count": 677,
  "year": 2013
}

--- a/c/cl/cla/classmarker.com.html
+++ b/c/cl/cla/classmarker.com.html
@@ -1,46 +1,67 @@
-<!--The following is the downloaded HTML source of the classmarker.com privacy policy that was archived on 2013-05-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130507060452id_/http%3A//www.classmarker.com/online-testing/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the classmarker.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226125859id_/http%3A//www.classmarker.com/online-testing/privacy) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" dir="ltr"><head>
+<!DOCTYPE html><html lang="en"><head>
+<title>Privacy ClassMarker</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="language" content="en">
 <meta name="description" content="The ClassMarker online testing website, is a professional, easy to use, online quiz maker that marks your tests and quizzes for you. Create online quizzes free quiz maker">
 <meta name="keywords" content="Online testing, Create online quizzes, free quiz maker, web based tests, online quiz maker, testing, test maker,  assesments, quiz software, quizzes, exams, free, classmarker, schools, teachers, students, instant marking, multiple choice, fill in the blank">
 <link rel="shortcut icon" href="/favicon.ico">
-<title>Privacy ClassMarker</title>
+<link rel="stylesheet" type="text/css" href="/css3/home/cmhome.css?v=2" media="screen">
 
-<link rel="stylesheet" type="text/css" href="http://img.classmarker.com/a/js/css/smoothness/jquery-ui-1.8.14.css">
-<link rel="stylesheet" type="text/css" href="/css/cm.css?v=19">
-<!--[if IE 6]>
-  <link rel="stylesheet" type="text/css" href="/css/ie6.css?v=8" />
-<![endif]-->
 <!--[if IE 7]>
-  <link rel="stylesheet" type="text/css" href="/css/ie7.css?v=8" />
+<link rel="stylesheet" type="text/css" media="all" href="/css3/home/ie7.css" />
 <![endif]-->
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://img.classmarker.com/a/js/cmmin.js?v=21"></script><script type="text/javascript">
-$(document).ready(function(){
-$("ul.sf-menu").superfish({pathClass:  'current'});
-});
-</script></head>
-<body class="home">
-<div id="cmcontent">
-<div class="col640">
-<h1><a href="/"><img src="http://img.classmarker.com/a/classmarker.gif" alt="Hosted online testing quiz maker"><span>ClassMarker</span></a></h1>
-</div>
-<div class="clear"></div>
+<!--[if IE 6]>
+<link rel="stylesheet" type="text/css" media="all" href="/css3/home/ie6.css" />
+<![endif]-->
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+	var web_root = "/";
+	var webpath_img = "http://img.classmarker.com/b/img/";
+	var ka_path = "/ka.php";
+</script>
+<script type="text/javascript" src="http://img.classmarker.com/b/js/jquery-1.9.1.min.js?v=1"></script><script type="text/javascript" src="http://img.classmarker.com/b/js/cmall.js?v=22"></script>
+</head>
+<body>
+	<div id="header">
+		<div class="col-full">
+			<h1>
+				<a href="/">
+					<img alt="Hosted online testing quiz maker" src="http://img.classmarker.com/b/img/home/free-quiz-maker.jpg" width="205" height="31">
+					<span>ClassMarker</span>
+				</a>
+			</h1>
 
-		<ul class="sf-menu"><li class="current"><a href="/">Home</a><ul>
+							<div class="header-buttons">
+				<a class="register" href="/register/">Register</a>
+				<a class="login" href="/">Log in</a>
+				</div>
+						</div>
 
-			<li><a href="/online-testing/how-to-create-online-quiz/">Tour</a></li>
+		<div class="nav">
+			<div class="col-full">
+				<ul>
+					<li><a href="/">Home</a></li>
+					<li><a href="/online-testing/how-to-create-online-quiz/">Take a Tour</a></li>
+					<li><a href="/online-testing/price/">Pricing</a></li>
+					<li><a href="/online-testing/faq/">FAQ's</a></li>
+					<li><a href="/online-testing/contact-us/">Contact</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 
-			<li><a href="/online-testing/price/">Pricing</a></li>
-			<li><a href="/online-testing/faq/">FAQ</a></li>
-			<li class="last"><a href="/online-testing/contact-us/">Contact us</a></li></ul></li></ul><div id="toplogin">
-   	 	<ul><li class="toplogin"><a href="/">Log in</a></li><li class="topregister"><a href="/register/">Register Free</a></li></ul>
-    	</div>
-		<div class="clear"></div>
-		<h2 class="homepage">Privacy</h2><div class="col640"><div class="gray">
-<p><strong>Our commitment to privacy</strong></p>
+
+<div id="main" class="white-bg">
+	<div class="col-full">
+		<div class="terms-box">
+
+
+
+	<h2>Privacy</h2>
+
+
+<h3>Our commitment to privacy</h3>
 <p>ClassMarker takes your privacy seriously. We are
 committed to protecting the privacy of personally identifiable
 information sent to us by you. It remains our policy and our commitment
@@ -49,7 +70,7 @@ email address or other personal information to any third party without
 your prior written consent.</p>
 
 
-<p><strong>What personal information we collect</strong></p>
+<h3>What personal information we collect</h3>
 
 <ul class="star">
 	<li>Name</li>
@@ -59,7 +80,7 @@ your prior written consent.</p>
 </ul>
 
 
-<p><strong>How we use this information</strong></p>
+<h3>How we use this information</h3>
 
 <p>We collect this information as a means of
 personalization and contact if required i.e. we can send you an email
@@ -95,7 +116,7 @@ to from the home page or via the 'Edit my details' page.</p>
 <p>Instructors and Users alike can easily edit their
 own information at any time after they have logged in.</p>
 
-<p><strong>External tests saved information</strong></p>
+<h3>External tests saved information</h3>
 
 <p>Users taking external tests may be asked to submit
 personal information like Name, Email address and anything else the
@@ -110,7 +131,7 @@ any information.</p>
 
 
 
-<p><strong>Protection</strong></p>
+<h3>Protection</h3>
 <p>ClassMarker is hosted in a high security data center
 which is staffed 24/7.</p>
 
@@ -127,7 +148,7 @@ default all your data in ClassMarker is private to your account.</p>
 
 <p>Payments using Credit cards are processed on the highly secure WorldPay.com website. ClassMarker does not store or process credit card numbers.</p>
 
-<p><strong>Cookies</strong></p>
+<h3>Cookies</h3>
 <p>Advertising is shown on ClassMarker pages for
 Instructor accounts that are not upgraded, and for student accounts that
 are not currently registered under an upgraded Instructor account.
@@ -156,40 +177,74 @@ send your query via our <a href="/online-testing/contact-us" title="contacts pag
 <p>View our <a href="/online-testing/terms/">Terms and conditions</a> page.</p>
 
 <div class="clearheight"></div>
-<h3></h3><div class="clearheight"></div><div class="col180"><a href="/online-testing/award-winning/"><img src="http://img.classmarker.com/a/the-best-online-testing-website.jpg" alt="ClassMarker is Award winning" border="0" width="150" height="59"></a></div>
-<div class="col180"><table class="globalsign" border="0" cellspacing="0" cellpadding="0" title="CLICK TO VERIFY: This site uses a GlobalSign SSL Certificate to secure your personal information."><tbody><tr><td><p><span id="ss_img_wrapper_130-65_image_en"><a href="http://www.globalsign.com/ssl/" rel="nofollow" target="_blank" title="SSL"><img alt="SSL Certificate" border="0" id="ss_img" src="http://seal.globalsign.com/SiteSeal/images/gs_noscript_130-65_en.gif"></a></span><script type="text/javascript" src="http://seal.globalsign.com/SiteSeal/gs_image_130-65_en.js" defer="defer"></script></p></td></tr></tbody></table></div>
-<div class="col180 nomarg"><a href="http://www.liquidweb.com/pcicompliant.htm" rel="nofollow" class="popupSmall"><img src="http://img.classmarker.com/a/pci-compliant-online-testing.gif" alt="ClassMarker online testing is PCI compliant" border="0" width="150" height="50"></a></div>
+<div class="clearheight"></div>
+<div class="col180"><a href="/online-testing/award-winning/"><img src="http://img.classmarker.com/b/img/home/the-best-online-testing-website.jpg" alt="ClassMarker is Award winning" width="150" height="59"></a></div>
+<div class="col180"><span id="ss_img_wrapper_130-65_image_en"><a href="http://www.globalsign.com/ssl/" rel="nofollow" target="_blank" title="SSL"><img alt="SSL Certificate" id="ss_img" src="http://seal.globalsign.com/SiteSeal/images/gs_noscript_130-65_en.gif"></a></span><script type="text/javascript" src="http://seal.globalsign.com/SiteSeal/gs_image_130-65_en.js" defer="defer"></script></div>
+<div class="col180 nomarg"><a href="http://www.liquidweb.com/pcicompliant.htm" rel="nofollow" class="popupSmall"><img src="http://img.classmarker.com/b/img/home/pci-compliant-online-testing.gif" alt="ClassMarker online testing is PCI compliant" width="150" height="50"></a></div>
 
-</div></div><div class="col280 nomarg rightcol"><h4>New to ClassMarker?</h4><p>Our easy &amp; secure hosted online testing service keeps your data safe, backed up and ready to go 24/7.<br><br>Register free and start creating online tests today.</p><a class="blocklink" href="/register/">Register free</a><hr class="dark"><h4>Search FAQ</h4><p><span class="black"><strong>Hint:</strong></span> Try searching only one or two keywords for maximum results.</p><form action="/online-testing/faq/" method="get">
-		<label class="largelabel" for="faqsearch">Search terms</label>
-		<input class="textinput" type="text" name="query" id="faqsearch">
 
-		<input type="submit" class="submit" value="Search">
-		</form><hr class="dark"></div></div>
-<div class="clear"></div>
-<div id="footer">
-<div id="footercontent">
-<ul>
-	<li><a href="/">ClassMarker Home</a></li>
-	<li><a href="/online-testing/">About ClassMarker</a></li>
-	<li><a href="/online-testing/terms/">Terms and Conditions</a></li>
-	<li><a href="/online-testing/privacy/">Privacy</a></li>
-	<li><a href="/online-testing/sitemap/">Site map</a></li>
-	<li class="last"><a href="/online-testing/contact-us/">Contact Us</a></li>
-</ul>
-<p>Copyright © 2006 - 2013 ClassMarker Pty Ltd. All rights reserved</p>
-</div>
-</div>
+
+
+		</div>
+	</div>
+</div><div id="footer">
+		<div class="col-full">
+			<ul class="footer-list1">
+				<li><a href="/">ClassMarker Home</a></li>
+				<li><a href="/online-testing/?trk=footer">About ClassMarker</a></li>
+				<li><a href="/online-testing/terms/?trk=footer">Terms and Conditions</a></li>
+				<li><a href="/online-testing/privacy/?trk=footer">Privacy</a></li>
+				<li><a href="/online-testing/sitemap/?trk=footer">Site map</a></li>
+				<li><a href="/online-testing/contact-us/?trk=footer">Contact Us</a></li>
+			</ul>
+			<ul class="footer-list2">
+				<li><a href="/online-testing/how-to-create-online-quiz/?trk=footer">Take a Tour</a></li>
+				<li><a href="/online-testing/integrate/?trk=footer">Developers: API</a></li>
+				<li><a href="/online-testing/quiz-features/?trk=footer#online-quiz-security">Security</a></li>
+				<li><a href="/online-testing/blog/?trk=footer">Blog</a></li>
+				<li><a href="/register/?trk=footer">Register</a></li>
+			</ul>
+
+			<div class="footer-content">
+								<div class="addthis_toolbox addthis_default_style ">
+					<a class="addthis_button_facebook_like"></a>
+					<a class="addthis_button_tweet"></a>
+					<a class="addthis_button_pinterest_pinit"></a>
+					<a class="addthis_counter addthis_pill_style"></a>
+				</div>
+				<h4>
+					<a href="/">
+						<img alt="Hosted online testing quiz maker" src="http://img.classmarker.com/b/img/home/free-quiz-make.png" width="152" height="21">
+						<span>ClassMarker</span>
+					</a>
+				</h4>
+
+				<p>Copyright © 2006 - 2013 ClassMarker Pty Ltd. All rights reserved.</p>
+
+			</div>
+		</div>
+	</div><!-- end footer -->
+
+			<script type="text/javascript">
+		$(document).ready(function(){
+			$('.select-box').customSelect();
+			$('#obj_video0').jqm({ajax: '/misc/tour.rpc.php?id=video0', trigger: '.video0'});
+			$('#obj_video4').jqm({ajax: '/misc/tour.rpc.php?id=video4', trigger: '.video4'});
+		});
+	</script>
+	<div class="jqmWindowWide clearHtml" id="obj_video0"></div>
+	<div class="jqmWindowWide clearHtml" id="obj_video4"></div>
+	<script type="text/javascript" defer="" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=classmarker"></script>
 <div id="ka"></div>
 <script type="text/javascript">
-	ka_path = '/ka.php';
-	var _gaq = _gaq || [];
-	_gaq.push(['_setAccount', 'UA-473958-2']);
-	_gaq.push(['_trackPageview']);
-	(function() {
-		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-	})();
+ka_path = "/ka.php";
+var _gaq = _gaq || [];
+_gaq.push(["_setAccount", "UA-473958-2"],
+['_trackPageview']);
+(function() {
+	var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+	ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+})();
 </script>
 </body></html>
