--- a/t/tw/twe/tweettunnel.com.html
+++ b/t/tw/twe/tweettunnel.com.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the tweettunnel.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624103818id_/http%3A//tweettunnel.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tweettunnel.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226155614id_/http%3A//tweettunnel.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title>Privacy Statement</title>
 <link rel="stylesheet" href="style.css" type="text/css" media="all">
 <link rel="icon" type="image/vnd.microsoft.icon" href="/images/icon.ico">
@@ -48,19 +49,18 @@ qacct:"p-57Y4VfBwTF_cM"
 <body>
 <div id="wrapper"><a href="redirect.php?ty=" style="float: right; margin: 5px 65px 0 0"><img src="./images/lighter.png" alt="Sign in with Twitter"></a><div id="left">
 <div id="logo">
-<h1><a href="/" title="TweetTunnel">TweetTunnel</a></h1>
+<h1><a href="http://tweettunnel.com" title="TweetTunnel">TweetTunnel</a></h1>
 </div>
 
 <div id="navigation3">
-        <ul id="menu3">
-       <li class="page_item"><a href="reverse.php">Old Tweets</a></li>  
-           <li class="page_item"><a href="http://old.tweettunnel.com/friend.php">Friends</a></li>  
-            <li class="page_item"><a href="gallery.php">Gallery</a></li>
-    <li class="page_item"><a href="verify.php">Verified</a></li>  
- 
-       <li class="page_item"><a href="http://old.tweettunnel.com/firstpre.php">First Follower</a></li> 
-             <li class="page_item"><a href="http://old.tweettunnel.com/msgall.php">DM All</a></li>                   
-    	</ul>
+  <a href="http://tweettunnel.info/msgbx.php">Msg Box</a>
+ <a href="http://tweettunnel.com/reverse.php">Old Twt</a>
+ <a href="http://tweettunnel.info/friend.php">Friend</a>
+ <a href="http://tweettunnel.info/gallery.php">Gallery</a>
+
+ <a href="http://tweettunnel.info/firstpre.php">First Fr</a>
+ <a href="http://old.tweettunnel.com/msgall.php">DM All</a>
+  <a href="http://tweettunnel.info/long.php">Long Twt</a>
     </div>
 
 <div class="content">
@@ -80,30 +80,21 @@ Users may opt out of the use of the DART cookie by visiting the Google ad and co
 <h2>About</h2>
 <p>Tweet Tunnel leads you to special features that you wouldn't find on <!-- google_ad_section_start -->Twitter<!-- google_ad_section_end -->. </p>
 <p>&nbsp;</p>
- <ul><li><a href="http://box.tweettunnel.com/msgbx.php">Message Box</a> - Private Messages for non-followers<p>&nbsp;</p></li>
+ <ul><li><a href="http://tweettunnel.info/msgbx.php">Message Box</a> - Private Messages for non-followers<p>&nbsp;</p></li>
      <li><a href="reverse.php">Old Tweets</a> - Shows someone's earlier tweets. Goes back as many as 3200 tweets <p>&nbsp;</p></li>
-     <li><a href="http://box.tweettunnel.com/friends.php">Circle of Friends</a> - Finds out who's interacting with whom on Twitter<p>&nbsp;</p></li>
-  <li><a href="gallery.php">Photo Gallery</a> - Showcase of Twitter members' current photos &amp; background images <p>&nbsp;</p></li>
+     <li><a href="http://tweettunnel.info/friends.php">Circle of Friends</a> - Finds out who's interacting with whom on Twitter<p>&nbsp;</p></li>
+  <li><a href="http://tweettunnel.info/gallery.php">Photo Gallery</a> - Showcase of Twitter members' current photos &amp; background images <p>&nbsp;</p></li>
 
  
  <li><a href="verify.php">Verified Users</a> - Directory of celebrities, businesses &amp; organizations on Twitter<p>&nbsp;</p></li>
-       <li><a href="http://box.tweettunnel.com/firstpre.php">First Follower</a> - Shows followers/following from the beginning <p>&nbsp;</p></li>     
+       <li><a href="http://tweettunnel.info/firstpre.php">First Follower</a> - Shows followers/following from the beginning <p>&nbsp;</p></li>     
      <li><a href="http://old.tweettunnel.com/msgall.php">DM All</a> - Sends Direct Messages to all your followers (up to 5,000)<p>&nbsp;</p></li>     
+  <li><a href="http://tweettunnel.info/long.php">Long Tweets</a> - Tweets whithout the 140 character limit<p>&nbsp;</p></li>     
 
            </ul>         
     
 </div>
 <div style="margin:0 0 0 6px;">
-<script type="text/javascript"><!--
-google_ad_client = "pub-7210710211491513";
-/* 125x125, created 9/3/11 */
-google_ad_slot = "3661759059";
-google_ad_width = 125;
-google_ad_height = 125;
-//-->
-</script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
 </div>
 
 </div>
@@ -111,9 +102,9 @@ google_ad_height = 125;
 
 <div class="clear"></div>
 <div id="footer">
-<div id="footxt"><a href="http://box.tweettunnel.com/msgbx.php">Message Box</a> - <a href="reverse.php">Old Tweets</a> - <a href="http://box.tweettunnel.com/friend.php">Circle of Friends</a> - <a href="gallery.php">Photo Gallery</a>  - <a href="verify.php">Verified Users</a> - <a href="http://box.tweettunnel.com/firstpre.php">First Follower</a> - <a href="http://old.tweettunnel.com/msgall.php">DM All</a></div>
-<script>if ("") {document.getElementById('footxt').innerHTML=' : &nbsp;<a href="/" >Tweets</a> - <a href="http://box.tweettunnel.com/friends.php?textfield=" >Friends</a> - <a href="gallery.php?n=" >Photos</a> - <a href="http://box.tweettunnel.com/firstfr.php?id=&t=y" >Followers</a> - <a href="http://box.tweettunnel.com/firstfg.php?id=&t=y" >Following</a>';
-document.getElementById('hdtxt').innerHTML=' : &nbsp;<a href="/" >Tweets</a> - <a href="http://box.tweettunnel.com/friends.php?textfield=" >Friends</a> - <a href="gallery.php?n=" >Photos</a> - <a href="http://box.tweettunnel.com/firstfr.php?id=&t=y" >Followers</a> - <a href="http://box.tweettunnel.com/firstfg.php?id=&t=y" >Following</a>';
+<div id="footxt"><a href="http://tweettunnel.info/msgbx.php">Message Box</a> - <a href="reverse.php">Old Tweets</a> - <a href="http://tweettunnel.info/friend.php">Circle of Friends</a> - <a href="http://tweettunnel.info/gallery.php">Photo Gallery</a>  - <a href="verify.php">Verified Users</a> - <a href="http://tweettunnel.info/firstpre.php">First Follower</a> - <a href="http://old.tweettunnel.com/msgall.php">DM All</a> - <a href="http://tweettunnel.info/long.php">Long Tweets</a></div>
+<script>if ("") {document.getElementById('footxt').innerHTML=' : &nbsp;<a href="/" >Tweets</a> - <a href="http://tweettunnel.info/friends.php?textfield=" >Friends</a> - <a href="http://tweettunnel.info/gallery.php?n=" >Photos</a> - <a href="http://tweettunnel.info/firstfr.php?id=&t=y" >Followers</a> - <a href="http://tweettunnel.info/firstfg.php?id=&t=y" >Following</a>';
+document.getElementById('hdtxt').innerHTML=' : &nbsp;<a href="/" >Tweets</a> - <a href="http://tweettunnel.info/friends.php?textfield=" >Friends</a> - <a href="http://tweettunnel.info/gallery.php?n=" >Photos</a> - <a href="http://tweettunnel.info/firstfr.php?id=&t=y" >Followers</a> - <a href="http://tweettunnel.info/firstfg.php?id=&t=y" >Following</a>';
 
 }</script><div style="clear:both"></div>
 <p></p><p>
