--- a/t/to/tor/torrentbar.com.html
+++ b/t/to/tor/torrentbar.com.html
@@ -1,102 +1,10 @@
-<!--The following is the downloaded HTML source of the torrentbar.com privacy policy that was archived on 2013-01-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130115163015id_/http%3A//torrentbar.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the torrentbar.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226171601id_/http%3A//torrentbar.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_masterheader"><title>
 	privacy policy at TorrentBar - www.torrentbar.com
-</title><meta name="Keywords" content="xdcc, fserve, packet, nfo, warez, w4rez, , rar, ace, axxo, game,iMesh,bt,movie download,LimeWire,bit torrent,iso,IRC,download,files,Gnutella,eDonkey2000,BitTorrent,filesharing,bin,search engine,bittorrent,Gnucleus,music,audio,imesh,Morpheus,Bit Torrent,divx,KaZaA,torrent,File Navigator,FileNavigator,cue,FastTrack,Grokster,eDonkey,BT,gnucleus,emule,mp3,music download,ed2k,search,napster,bitrate,mp3 download"><meta name="Description" content="privacy policy at TorrentBar - the best Bit Torrents search engine site for movies, music and games free torrent download."><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link rel="stylesheet" href="/theme/style.css" type="text/css" media="all"><link rel="stylesheet" href="/theme/thickbox.css" type="text/css" media="screen"><link rel="stylesheet" href="/theme/rating.css" type="text/css"> 
-<script type="text/javascript" src="/script/jquery.js"></script>
-<script type="text/javascript" src="/script/jquery.form.js"></script>
-<script type="text/javascript" src="/script/jquery.cookie.js"></script>
-<script type="text/javascript" src="/script/torrentbar.js"></script>    
-<script type="text/javascript" src="/script/thickbox.js"></script>
-</head>
-<body>
-<script language="javascript">checkframe();</script>
-<div id="tbwin" style="height:0px;">
-<!--<div id=nw></div>-->
-<div id="bg2">
-	<div class="bg_shell">
-	    <div id="logo"><form id="qry" method="get" action="/query.html"><h2>TorrentBar - the best Bit Torrents search engine for movies, music and games free torrent download.</h2><br><img src="/images/logo4.gif"><input type="hidden" name="g" value="0"><input type="hidden" name="c" value="0"><input type="hidden" name="page" value="1"><input type="text" size="10" id="k" name="k" class="srch_box3"><img src="/images/search_s.gif" style="cursor:pointer;" onclick="javascript:qrysubmit();">
-	    </form></div>
-	    <div id="top_login">
-		    <div id="top_w">
-			    <ul><li>|</li><li><a href="http://blog.torrentbar.com/">Help</a></li></ul>
-		    </div>				
-	    </div>		
-	  <div id="search_key">
-	    <strong><a href="/">Home</a></strong> <span class="gray">|</span> <strong><a href="/mostdownload.html">Most Download</a></strong> <span class="gray">|</span> <strong><a href="/latest.html">Latest Torrents</a></strong> <span class="gray">|</span> 
-	    <a href="http://www.hitfreegames.com/" target="_blank"><font color="#ff0000">Free Games</font></a> <span class="gray">|</span> 
-	    <strong><a href="/tvshow.html">TV Shows</a></strong> <span class="gray">|</span> <strong><a href="/categories.html">Categories</a></strong> <span class="gray">|</span> 
-	    
-	  </div>
-	  <div id="mid">
-		  <div id="left_advert">
-              <br>
-              <iframe scrolling="no" frameborder="0" height="600" width="160" marginheight="0" marginwidth="0" src="http://e.dreamboxcart.com/earning/b160.html"></iframe> 
-		  </div>		  
-		  <div id="right_content">
-			<iframe scrolling="no" frameborder="0" height="90" width="728" marginheight="0" marginwidth="0" src="http://e.dreamboxcart.com/earning/bt728.html"></iframe>			
-			<div style="margin-top:5px"></div>
-			
-			 <div class="doc">
-<div class="doc_wrap">
-<div class="doc_ft clearfix">
-<div id="help">
-  <h4 class="f1">EDITORIAL</h4>
-  <div>
-<a href="siteterms.html">Site Terms of Use</a><br>
-<a href="privacy.html">Privacy Policy</a><br>
-<a href="copyright.html">Copyright Notice</a><br>
-<a href="#">Advertise</a><br>
-<a href="contact.html">Contact</a>
-</div>
-</div>
-<div class="doc_mWrap">
-<div class="doc_m">
-<p>
-</p><div class="green">Privacy Policy<p></p></div>
-<p>
-</p><h4>Overall privacy statement</h4>
-We have established and implemented this Privacy Policy to inform you, the users of the services of TorrentBar.com and its products, how we use and protect the personal information when you use the services.<br><br>
-
-<h4>1.	What information does TorrentBar collect?</h4>
-Our primary goal in collecting personal information is to provide you with the best and most useful content and services. You are required to provide us with some information as a condition of usage during the registration.  But your personally identifiable information can NOT be distinguished. What we need is only your email address which tells nothing about whom you are. Also, we may need your help by submitting information like your age, occupation, region, gender, country and so on to form the aggregate usage of TorrentBar. We do not record this as a single user's information and do not bind this information with your username or email address.<br><br>
-<h4>2.How does TorrentBAr share the information?</h4>
-We know your personal information is very important to you and us, so we will never give this information to any others.<br><br>
-
-<h4>3. Your choices</h4>
-a. By using the services offered by TorrentBar, you acknowledge you agree with this Privacy Policy. If you do not agree with the Policy, you may not access or use the services of this site. You will not be notified if this policy is materially changed, you have to check this page for the latest privacy policy yourself.<br><br>
-b. You can refuse to register as a member of this site, then you do not have to show us any of your imformation.<br><br>
-
-<p></p>
-
-</div></div></div></div></div>
-
-			<div style="padding-top:15px; width:100%; float:left;">
-			<iframe scrolling="no" frameborder="0" height="90" width="728" marginheight="0" marginwidth="0" src="http://e.dreamboxcart.com/earning/bb728.html"></iframe>   
-		        </div>
-          </div>
-	  </div>
-	  
-<div id="foot">
-  <ul>
-	  <li><a href="/contact.html" target="_blank">Contact Us</a> | <a href="/copyright.html" target="_blank">DMCA</a> | <a href="/privacy.html" target="_blank">Privacy Policy</a> | <a href="/alltorrents.html" target="_blank">All Torrents</a> | <a href="http://blog.torrentbar.com" target="_blank">Help</a> | <a href="http://www.hitfreegames.com" target="_blank" title="hitfreegames.com"><font color="red">Free Flash Games</font></a> | <a href="http://www.torrentroom.com" target="_blank" title="torrentroom.com">TorrentRoom</a> | <a href="http://www.torrentv.org" title="movie/game/tvshow torrents search engine" target="_blank">torrents search engine</a> | <a href="http://www.lyricsdict.com/" target="_blank">Music and Lyrics</a> | <a href="http://www.dreamboxfile.com" target="_blank" title="DreamboxFile is the largest source for everything digital satellite tv receiver including a huge Plugins,Images,Emu files database">Largest source of DreamBox</a></li>
-	  <li>© 2007-2012 <a href="http://www.torrentbar.com">www.torrentbar.com</a> All rights reserved. </li>
-  </ul>
-</div>
-<br>
-	</div>	
-</div>
-<!--<script language=javascript>network();btfloat();</script>-->
-<!-- PredictAd Code -->
-<!--<div id="predictad_div" class="predictad" style="display:none;z-index:1000"></div><script>function runPredictor(){predictad_input_id='k';predictad_ads_mode='0';predictad_db='10';predictad_site='4376';predictad_cs='7000-309';predictad_box_id='1';predictad_skin='mclassic';predictad_align='left';predictad_select_color='background-color: #FFCC00;border:solid 1px #FFCC00;';predictor();}try{var html_doc = document.getElementsByTagName('head')[0];predictad_js = document.createElement('script');predictad_js.setAttribute('type', 'text/javascript');predictad_js.setAttribute('src', 'http://www.predictad.com/scripts/molosky/combined.js');html_doc.appendChild(predictad_js);predictad_js.onreadystatechange = function () {if (predictad_js.readyState == 'complete'||predictad_js.readyState == 'loaded') {runPredictor();}};predictad_js.onload = function () {runPredictor();};var f = document.getElementById('k').setAttribute('autocomplete', 'off'); }catch(pex){};</script>-->
-<!-- End PredictAd Code -->
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
+</title><meta name="Keywords" content="xdcc, fserve, packet, nfo, warez, w4rez, , rar, ace, axxo, game,iMesh,bt,movie download,LimeWire,bit torrent,iso,IRC,download,files,Gnutella,eDonkey2000,BitTorrent,filesharing,bin,search engine,bittorrent,Gnucleus,music,audio,imesh,Morpheus,Bit Torrent,divx,KaZaA,torrent,File Navigator,FileNavigator,cue,FastTrack,Grokster,eDonkey,BT,gnucleus,emule,mp3,music download,ed2k,search,napster,bitrate,mp3 download"><meta name="Description" content="privacy policy at TorrentBar - the best Bit Torrents search engine site for movies free torrent download."><meta http-equiv="Content-Type" content="text/html; charset=utf-8"><link rel="stylesheet" href="/theme/style.css" type="text/css" media="all"><script language="javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script> <script type="text/javascript" src="/script/torrentbar.js"></script></head><body><div id="bg2"><div class="bg_shell"><div id="logo"><form id="searchform" accept-charset="UTF-8" action="/query" method="get" onsubmit="return doSearch(this.k.value);"><h2>TorrentBar - the best Bit Torrents search engine for movies, music and games free torrent download.</h2><br> <img src="/images/logo4.gif"> <input type="text" id="search_box" name="k" size="10" class="srch_box3"> <img src="/images/search_s.gif" style="cursor: pointer;" onclick="qrysubmit();"></form></div><div id="top_login"><div id="top_w"><ul><li>|</li><li><a href="http://blog.torrentbar.com/">Help</a></li></ul></div></div><div id="search_key"><strong><a href="/">Home</a></strong> <span class="gray">|</span> <strong><a href="/latest.html">Latest Torrents</a></strong> <span class="gray">|</span> <strong><a href="/categories.html">Categories</a></strong> <span class="gray">|</span></div><div id="mid"><div id="right_content"><iframe scrolling="no" frameborder="0" width="728" height="90" marginheight="0" marginwidth="0" src="http://pub.dreamboxcart.com/bar/728.html"></iframe><div style="margin-top:5px"></div><div class="doc"><div class="doc_wrap"><div class="doc_ft clearfix"><div id="help"><h4 class="f1">EDITORIAL</h4><div><a href="siteterms.html">Site Terms of Use</a><br> <a href="privacy.html">Privacy Policy</a><br> <a href="copyright.html">Copyright Notice</a><br> <a href="contact.html">Contact</a></div></div><div class="doc_mWrap"><div class="doc_m"><p></p><div class="green">Privacy Policy<p></p></div><p></p><h4>Overall privacy statement</h4> We have established and implemented this Privacy Policy to inform you, the users of the services of TorrentBar.com and its products, how we use and protect the personal information when you use the services.<br><br> <h4>1. What information does TorrentBar collect?</h4> Our primary goal in collecting personal information is to provide you with the best and most useful content and services. You are required to provide us with some information as a condition of usage during the registration. But your personally identifiable information can NOT be distinguished. What we need is only your email address which tells nothing about whom you are. Also, we may need your help by submitting information like your age, occupation, region, gender, country and so on to form the aggregate usage of TorrentBar. We do not record this as a single user's information and do not bind this information with your username or email address.<br><br> <h4>2.How does TorrentBAr share the information?</h4> We know your personal information is very important to you and us, so we will never give this information to any others.<br><br> <h4>3. Your choices</h4> a. By using the services offered by TorrentBar, you acknowledge you agree with this Privacy Policy. If you do not agree with the Policy, you may not access or use the services of this site. You will not be notified if this policy is materially changed, you have to check this page for the latest privacy policy yourself.<br><br> b. You can refuse to register as a member of this site, then you do not have to show us any of your imformation.<br><br><p></p></div></div></div></div></div></div></div><div id="foot"><ul><li><a href="/contact.html" target="_blank">Contact Us</a> | <a href="/copyright.html" target="_blank">DMCA</a> | <a href="/privacy.html" target="_blank">Privacy Policy</a> | <a href="http://blog.torrentbar.com" target="_blank">Help</a> | <a href="http://www.hitfreegames.com" target="_blank" title="hitfreegames.com"><font color="red">Free Flash Games</font></a> | <a href="http://www.torrentroom.com" target="_blank" title="torrentroom.com">TorrentRoom</a> | <a href="http://www.torrentv.org" title="movie/game/tvshow torrents search engine" target="_blank">torrents search engine</a> | <a href="http://www.lyricsdict.com/" target="_blank">Music and Lyrics</a> | <a href="http://www.dreamboxfile.com" target="_blank" title="DreamboxFile is the largest source for everything digital satellite tv receiver including a huge Plugins,Images,Emu files database">Largest source of DreamBox</a></li> <li>© 2007-2013 <a href="http://www.torrentbar.com">www.torrentbar.com</a> All rights reserved.</li></ul></div><br> </div></div><script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script> <script type="text/javascript">
 _uacct = "UA-150815-11";
 urchinTracker();
-</script>
-
-
-</div></body></html>
+</script></body></html>
