--- a/e/en/ent/entertainment.ie.html
+++ b/e/en/ent/entertainment.ie.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the entertainment.ie privacy policy that was archived on 2013-06-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130615024143id_/http%3A//entertainment.ie/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the entertainment.ie privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226180349id_/http%3A//entertainment.ie/privacy.asp) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><script async="" src="https://archive.org/includes/analytics.js?v=cf34f82&amp;_=1580468871533"></script>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><script async="" src="https://archive.org/includes/analytics.js?v=cf34f82&amp;_=1580468869075"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 	<title>Privacy Policy | Entertainment.ie</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -17,16 +17,16 @@
 <meta name="p:domain_verify" content="19ff4ebe1459aab6c16f1a06c3fb6a5c">
 <meta property="fb:app_id" name="fb:app_id" content="105680796192624">
 
-<!-- <link media="all" type="text/css" rel="stylesheet" href="http://images.entertainment.ie/css/screen.css" /> -->
-<link media="all" type="text/css" rel="stylesheet" href="http://images.entertainment.ie/css/developer.css">
+<!-- <link media="all" type="text/css" rel="stylesheet" href="/css/screen.css" /> -->
+<link media="all" type="text/css" rel="stylesheet" href="/css/developer.css">
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:700" rel="stylesheet" type="text/css">
 
 <!--[if lte IE 8]>
-	<link rel="stylesheet" type="text/css" href="http://images.entertainment.ie/css/meganav-ie7-8.css" />
+	<link rel="stylesheet" type="text/css" href="/css/meganav-ie7-8.css" />
 <![endif]-->
 
 
-<script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="http://sdscdn.userreport.com/userreport.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript">
+<script id="twitter-wjs" src="//platform.twitter.com/widgets.js"></script><script type="text/javascript" async="" src="http://sdscdn.userreport.com/userreport.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="https://sb.scorecardresearch.com/beacon.js"></script><script type="text/javascript">
     var isLoggedIn = false;
 </script>
 
@@ -85,7 +85,7 @@ s.parentNode.insertBefore(ga, s); })();
   (function() { var ga = document.createElement('script'); ga.type ='text/javascript'; ga.async = true;
   ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js'; var s = document.getElementsByTagName('script')[0];
   s.parentNode.insertBefore(ga, s); })();
-  $("a[href*='entertainment.ticketsolve.com']").live('click', function() {_gaq.push(['_link', $(this).attr("href")]);return false;});</script>
+  $("a[href*='ticketsolve.com']").live('click', function() {_gaq.push(['_link', $(this).attr("href")]);return false;});</script>
 <script type="text/javascript">
 var _urq = _urq || [];_urq.push(['initSite', '88b53718-1638-4e6a-8bef-ba7036f686d5']);
 (function() {
@@ -97,7 +97,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ur
 
 
 </head>
-<body class="oldnew">
+<body class="oldnew" onload="showMap();">
 <!-- 1. Header (including ads) -->
 <div id="head"> 
 	<div id="h-top">
@@ -135,7 +135,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ur
 if (window.adgroupid == undefined) {window.adgroupid = Math.round(Math.random() * 1000);}
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|1358209|0|225|ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp='+window.adgroupid+';misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|1358209|0|225|ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=454;misc=1580468870688"></script>
+</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|1358209|0|225|ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=230;misc=1580468868471"></script>
 <noscript><a href="http://adserver.adtech.de/adlink|3.0|690|1358209|0|225|ADTECH;loc=300;key=key1+key2+key3+key4" target="_blank"><img src="http://adserver.adtech.de/adserv|3.0|690|1358209|0|225|ADTECH;loc=300;key=key1+key2+key3+key4" border="0" width="728" height="90"></a></noscript>
 	<!-- End of JavaScript Tag -->  
 </div>
@@ -145,7 +145,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.
 if (window.adgroupid == undefined) {window.adgroupid = Math.round(Math.random() * 1000);}
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|1422950|0|938|ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp='+window.adgroupid+';misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|1422950|0|938|ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=454;misc=1580468870693"></script>
+</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|1422950|0|938|ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=230;misc=1580468868480"></script>
 <noscript><a href="http://adserver.adtech.de/adlink|3.0|690|1422950|0|938|ADTECH;loc=300;key=key1+key2+key3+key4" target="_blank"><img src="http://adserver.adtech.de/adserv|3.0|690|1422950|0|938|ADTECH;loc=300;key=key1+key2+key3+key4" border="0" width="728" height="90"></a></noscript>
 	<!-- End of JavaScript Tag -->  
 </div>
@@ -738,7 +738,7 @@ if (window.adgroupid == undefined) {
 }
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|2578624|0|165|ADTECH;loc=100;target=_blank;grp='+window.adgroupid+';misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|2578624|0|165|ADTECH;loc=100;target=_blank;grp=454;misc=1580468870913"></script><noscript><a href="http://adserver.adtech.de/adlink|3.0|690|2578624|0|165|ADTECH;loc=300" target="_blank"><img src="http://adserver.adtech.de/adserv|3.0|690|2578624|0|165|ADTECH;loc=300" border="0" width="250" height="250"></a></noscript>
+</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|2578624|0|165|ADTECH;loc=100;target=_blank;grp=230;misc=1580468868594"></script><noscript><a href="http://adserver.adtech.de/adlink|3.0|690|2578624|0|165|ADTECH;loc=300" target="_blank"><img src="http://adserver.adtech.de/adserv|3.0|690|2578624|0|165|ADTECH;loc=300" border="0" width="250" height="250"></a></noscript>
 <!-- End of JavaScript Tag -->
 
 
@@ -777,7 +777,7 @@ if (window.adgroupid == undefined) {
 }
 document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|4041272|0|225|ADTECH;loc=100;target=_blank;grp='+window.adgroupid+';misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|4041272|0|225|ADTECH;loc=100;target=_blank;grp=454;misc=1580468871121"></script><noscript><a href="http://adserver.adtech.de/adlink|3.0|690|4041272|0|225|ADTECH;loc=300" target="_blank"><img src="http://adserver.adtech.de/adserv|3.0|690|4041272|0|225|ADTECH;loc=300" border="0" width="728" height="90"></a></noscript>
+</script><script language="javascript1.1" src="http://adserver.adtech.de/addyn|3.0|690|4041272|0|225|ADTECH;loc=100;target=_blank;grp=230;misc=1580468868613"></script><noscript><a href="http://adserver.adtech.de/adlink|3.0|690|4041272|0|225|ADTECH;loc=300" target="_blank"><img src="http://adserver.adtech.de/adserv|3.0|690|4041272|0|225|ADTECH;loc=300" border="0" width="728" height="90"></a></noscript>
 <!-- End of JavaScript Tag -->
 
 </div>
@@ -863,9 +863,9 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.
   <div id="f-mid">
     <h4><!--Weather-->Weather</h4>
 
-    <p id="f-weather"><img src="/images/blank.gif" data-original="//images.entertainment.ie/images/icons/weather/medium_rain_showers.png" title="RAIN SHOWER
-" alt="RAIN SHOWER
-" width="128" height="128" class="lazy"><strong>15°</strong> <a href="/ulike/" title="Change location">Dublin <span></span></a><br>
+    <p id="f-weather"><img src="/images/blank.gif" data-original="//images.entertainment.ie/images/icons/weather/cloudy.png" title="CLOUDY
+" alt="CLOUDY
+" width="128" height="128" class="lazy"><strong>5°</strong> <a href="/ulike/" title="Change location">Dublin <span></span></a><br>
       <em>© <a href="http://www.met.ie/" target="_blank">Met Éireann</a> 2013</em>
     </p>
 	<div id="f-team">
@@ -876,7 +876,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.
         <li><a href="/contactUs/editor2.asp"><img src="//images.entertainment.ie/images/meetTheTeam/16Sm.jpg" width="52" height="52" alt="David Bryan"></a></li>
 		        <li><a href="/contactUs/editor6.asp"><img src="//images.entertainment.ie/images/meetTheTeam/5Sm.jpg" width="52" height="52" alt="Caroline Foran"></a></li>
         <li class="first"><a href="/contactUs/editor4.asp"><img src="//images.entertainment.ie/images/meetTheTeam/4Sm.jpg" width="52" height="52" alt="John Balfe"></a></li>
-        <li><a href="/contactUs/tickets1.asp"><img src="//images.entertainment.ie/images/meetTheTeam/6Sm.jpg" width="52" height="52" alt="Sarah Murphy"></a></li>
+        <li><a href="/contactUs/editor11.asp"><img src="//images.entertainment.ie/images/meetTheTeam/20Sm.jpg" width="52" height="52" alt="Sarah Doran"></a></li>
         <li><a href="/contactUs/tickets2.asp"><img src="//images.entertainment.ie/images/meetTheTeam/7Sm.jpg" width="52" height="52" alt="Scott Rubbathan"></a></li>
 		<li><a href="/contactus/editor5.asp"><img src="//images.entertainment.ie/images/meetTheTeam/10Sm.jpg" width="52" height="52" alt="Catherine Egan"></a></li>
 		
@@ -913,7 +913,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.
     <!--h4>Latest followers</h4-->
     <!-- <p><iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.facebook.com%2Fentertainment.ie&amp;layout=button_count&amp;show_faces=false&amp;width=133&amp;action=like&amp;font=verdana&amp;colorscheme=light&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:133px; height:21px;" allowTransparency="true"></iframe></p> -->
   </div>
-  <p id="f-btm"><a href="/contactus/">Contact Us</a> | <a href="/advertising_information.asp">Advertise</a> | <a href="/tickets/infoForSellers/">Ticket Sales</a> | <a href="/addlistings/">Submit Listing</a> | <a href="/contactus/form.asp?enq=tech">Reporting a Problem</a> | <a href="/contactus/form.asp?enq=feed">Feedback</a> | <a href="/termsandconditions.asp">Terms &amp; Conditions</a> | <a href="/privacy.asp">Privacy Policy</a> | <a href="/cookiepolicy.asp">Cookie Policy</a> | <a href="/site-directory/">Site Directory</a></p>
+  <p id="f-btm"><a href="/contactus/">Contact Us</a> | <a href="/advertise-with-us/">Advertise</a> | <a href="/tickets/infoForSellers/">Ticket Sales</a> | <a href="/addlistings/">Submit Listing</a> | <a href="/eventlisting/">Partner Login</a> | <a href="/contactus/form.asp?enq=tech">Reporting a Problem</a> | <a href="/contactus/form.asp?enq=feed">Feedback</a> | <a href="/termsandconditions.asp">Terms &amp; Conditions</a> | <a href="/privacy.asp">Privacy Policy</a> | <a href="/cookiepolicy.asp">Cookie Policy</a> | <a href="/site-directory/">Site Directory</a></p>
   <p id="f-copyright">
 	<span style="float:right">© 2013  entertainment.ie, 26 Great Strand Street, Dublin 1 | <a href="http://fusio.net">Web Development by Fusio</a></span>
 
@@ -921,39 +921,6 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://adserver.adtech.
   </p>
   </div>
 
-
-<!-------------------------------------------------------->
-<!-- 			QUANTCAST TRACKING						-->
-<!-------------------------------------------------------->
-
-
-<!-- Quantcast Tag -->
-<script type="text/javascript">
-var _qevents = _qevents || [];
-
-(function() {
-var elem = document.createElement('script');
-elem.src = (document.location.protocol == "https:" ? "https://secure" : "http://edge") + ".quantserve.com/quant.js";
-elem.async = true;
-elem.type = "text/javascript";
-var scpt = document.getElementsByTagName('script')[0];
-scpt.parentNode.insertBefore(elem, scpt);
-})();
-
-_qevents.push({
-qacct:"p-G0HcX6dea6T6b"
-});
-</script>
-
-<noscript>
-<div style="display:none;">
-<img src="//pixel.quantserve.com/pixel/p-G0HcX6dea6T6b.gif" border="0" height="1" width="1" alt="Quantcast"/>
-</div>
-</noscript>
-<!-- End Quantcast tag -->
-<!-------------------------------------------------------->
-<!-- 		END OF QUANTCAST TRACKING					-->
-<!-------------------------------------------------------->
 
 
 </body></html>
