gov.sk.ca (archived on 2013-12-26)
{
  "alexa_rank": 91226,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 2304,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.67,
  "homepage_snapshot_redirected_domain": "gov.sk.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131001144538id_/http://www.gov.sk.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131001144538id_/http%3A//gov.sk.ca",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "gov.sk.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131226180633id_/http%3A//www.gov.sk.ca/privacy",
  "policy_title": "Internet Privacy Policy - Government of Saskatchewan",
  "policy_url": "gov.sk.ca/privacy",
  "sha1": "8a81e7226709231fcaca5a5356c6c48306489e62",
  "simhash": 4912569552574966458,
  "simhash_updated": false,
  "site_hostname": "gov.sk.ca",
  "site_url": "http://gov.sk.ca",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20131226180633",
  "word_count": 351,
  "year": 2013
}

--- a/g/go/gov/gov.sk.ca.html
+++ b/g/go/gov/gov.sk.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gov.sk.ca privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620165242id_/http%3A//www.gov.sk.ca/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gov.sk.ca privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226180633id_/http%3A//www.gov.sk.ca/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="ctl00_header1"><title>
 	Internet Privacy Policy - Government of Saskatchewan
@@ -135,17 +135,9 @@ _gaq.push(  ['_setAccount', mainAccount],
 				</a></div></li>
 			</ul>
 	</div>
-	<div id="HeaderTopRight">
-		<div id="TopDate">
-		    <span id="ctl00_Header_TodaysDate">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Thursday, June 20, 2013</span>
-		</div>
-		<div id="BottomRightSection"><a href="http://gtds.gov.sk.ca">
-		Directory
-        </a><span>|</span>
-        <a href="/Contact">Contact Us
-        </a></div>
-	</div>
-</form>
+<div id="HeaderTopRight">
+<div id="TopDate"><span id="ctl00_Header_TodaysDate">Thursday, December 26, 2013</span></div>
+<div id="BottomRightSection"><a href="http://gtds.gov.sk.ca">Directory</a><span>|</span><a href="/Contact">Contact Us</a></div></div></form>
                         <div id="HeaderMain">
                             
                             <table cellspacing="0" cellpadding="0" border="0" width="100%"><tbody><tr><td><table border="0" cellpadding="0" cellspacing="0" class="adxSectionImageTable" align="left"><tbody><tr><td align="center"><img border="0" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=3269&amp;Filename=Central-Summer-RuralEconomy(small).jpg" width="573" height="100" alt="Saskatchewan"></td></tr></tbody></table></td></tr></tbody></table> 
@@ -181,6 +173,10 @@ _gaq.push(  ['_setAccount', mainAccount],
                         
 <div>
     <div id="LeftColumn">
+    <div class="TopAdSpacer">
+        <div><a href="/adx/aspx/adxAdReDirect.aspx?ID=367&amp;l=English&amp;URL=http%3a%2f%2feconomy.gov.sk.ca%2fRapidResponse-PCS" target="_blank"><img border="0" align="left" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=58c7fc38-9815-42cb-ab58-e26f7371a2de&amp;Filename=important-info-pcs-workers.jpg" width="200" height="60" alt=""></a></div><div class="Clear"></div>
+    </div>
+
 <div id="LeftColumnNav" class="Navigation HeaderBodyModule">
 	<div class="Header">
 		<p class="Title">Resources</p>
@@ -198,7 +194,7 @@ _gaq.push(  ['_setAccount', mainAccount],
 </div>
 
     <div class="AdSpacer">
-        <div><a href="/adx/aspx/adxAdReDirect.aspx?ID=359&amp;l=English&amp;URL=%2fsocial"><img border="0" align="left" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=6157c303-7911-4dd1-8e2f-59bc6369e98f&amp;Filename=button.jpg" width="200" height="55" alt=""></a></div><div class="Clear"></div>
+        <div><a href="/adx/aspx/adxAdReDirect.aspx?ID=365&amp;l=English&amp;URL=http%3a%2f%2fwww.gov.sk.ca%2fthrone-speech-2013"><img border="0" align="left" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=113e4d29-02f0-46f5-a56e-a080b305321c&amp;Filename=throne-speech-2013.jpg" width="200" height="60" alt=""></a></div><div class="Clear"></div>
     </div>
 
 
@@ -208,7 +204,7 @@ _gaq.push(  ['_setAccount', mainAccount],
 
 
     <div class="AdSpacer">
-        <div><a href="/adx/aspx/adxAdReDirect.aspx?ID=355&amp;l=English&amp;URL=http%3a%2f%2fae.gov.sk.ca%2fgrp"><img border="0" align="left" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=3f9f3493-9f52-4c55-b53e-70dfd84e2a26&amp;Filename=grp.jpg" width="200" height="60" alt="Grad Retention Program &amp; Student Loans"></a></div><div class="Clear"></div>
+        <div><a href="/adx/aspx/adxAdReDirect.aspx?ID=355&amp;l=English&amp;URL=http%3a%2f%2fae.gov.sk.ca%2fgrp"><img border="0" align="left" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=35380138-0642-4dd7-aba7-0fbb90c34b16&amp;Filename=grp-button.jpg" width="200" height="60" alt="Grad Retention Program &amp; Student Loans"></a></div><div class="Clear"></div>
     </div>
 
 
@@ -219,7 +215,7 @@ _gaq.push(  ['_setAccount', mainAccount],
 
 
     <div class="AdSpacer">
-        <div><a href="/adx/aspx/adxAdReDirect.aspx?ID=44&amp;l=English&amp;URL=http%3a%2f%2fwww.saskjobs.ca%2f" target="_blank"><img border="0" align="left" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=3675&amp;Filename=SaskJobs-Logo.jpg" width="187" height="56" alt="saskjobs.ca - real careers. real life"></a></div><div class="Clear"></div>
+        <div><a href="/adx/aspx/adxAdReDirect.aspx?ID=364&amp;l=English&amp;URL=http%3a%2f%2fgov.sk.ca%2fsaskplanforgrowth"><img border="0" align="left" src="/adx/aspx/adxGetMedia.aspx?DocID=&amp;MediaID=71d52484-f940-4814-ac54-9eedfa21abe8&amp;Filename=skgp-progress-button.jpg" width="200" height="55" alt=""></a></div><div class="Clear"></div>
     </div>
 
 </div>
@@ -308,6 +304,6 @@ _gaq.push(  ['_setAccount', mainAccount],
     </div>
 
 
-<!-- DMZ-GOSCMS02P-->
+<!-- DMZ-GOSCMS03P-->
 <!-- Page OK -->
 </body></html>
