--- a/r/re/rec/recipesource.com.html
+++ b/r/re/rec/recipesource.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the recipesource.com privacy policy that was archived on 2013-05-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130507062747id_/http%3A//recipesource.com/admin/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the recipesource.com privacy policy that was archived on 2013-12-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226183209id_/http%3A//www.recipesource.com/admin/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <title>RecipeSource: Our Site and Your Privacy</title>
@@ -61,6 +61,17 @@
 			<!-- %SEARCH% -->
 			<br><a href="/search.html">Advanced Search</a>
 		      </form></td></tr>
+                  <tr class="sn-cont">
+                    <td nowrap="">
+                      <div style="color: #006600; font: bold italic 120% &quot;Zapf Chancery&quot;, &quot;URW Chancery L&quot;, &quot;Apple Chancery&quot; &quot;Palatino&quot;;">Happy Holidays!</div>
+                      <img align="left" src="/images/holly-icon.gif" height="72" width="73" alt="Holiday icon">
+                        <ul>
+                          <li><a href="/baked-goods/desserts/pies/">Pie Recipes</a></li>
+                          <li><a href="/baked-goods/desserts/cookies/">Cookie Recipes</a></li>
+                          <li><a href="/holiday">Holiday Recipes</a></li>
+                        </ul>
+                    </td>
+                  </tr>
 		  <tr class="sn-head">
 		    <td nowrap="nowrap">Browse by region:</td></tr>
 		  <tr class="sn-cont">
